--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "blogs-api",
   "version": "1.0.0",
